@@ -1,3 +1,10 @@
+Development Portal (2017-08-03 shi)
+==============================
+Updated 'Inspire' template
+Updated 'Mustard' template
+Updated 'Grey' template
+
+
 Development Portal (2017-08-01 shi)
 ==============================
 Renamed 'Status' to 'Activity Status'
